Fix mobile device footer alignment issue and change font sizes from px to rem to scale with  mobile devices.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,15 @@
     width: 100vw;
     height: 100vh;
     flex-direction: column;
+    align-items: center;
+}
+
+.container-index {
+    display: flex;
+    flex: auto;
+    width: 100%;
+    height: 100%;
+    flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
 }
@@ -30,9 +39,9 @@
     flex: auto;
     padding-top: 30px;
     padding: 20px;
-    width: 50%;
+    width: 40%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 28px;
+    font-size: clamp(1.1rem, 2.1rem, 1.6rem);
     color: #f2f2f2;
     justify-content: left;
     align-items: center;
@@ -48,14 +57,15 @@ img {
 
 .header-links {
     display: flex;
-    width: 50%;
+    flex-wrap: wrap;
+    width: 60%;
     justify-content: right;
     align-items: center;
 }
 
 .link {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
+    font-size: clamp(.4rem, 1.5rem, .8rem);
     padding-right: 24px;
     padding-left: 20px;
     color: #e5e5e5;
